WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
204225
[LFC][Invalidation] Reuse FrameViewLayoutContext::m_layoutState for incremental layout
https://bugs.webkit.org/show_bug.cgi?id=204225
Summary
[LFC][Invalidation] Reuse FrameViewLayoutContext::m_layoutState for increment...
alan
Reported
2019-11-15 07:39:26 PST
No need to re-construct it on every layout frame.
Attachments
Patch
(9.95 KB, patch)
2019-11-15 07:43 PST
,
alan
no flags
Details
Formatted Diff
Diff
Patch
(9.95 KB, patch)
2019-11-15 07:53 PST
,
alan
no flags
Details
Formatted Diff
Diff
Patch
(10.09 KB, patch)
2019-11-15 08:02 PST
,
alan
no flags
Details
Formatted Diff
Diff
Patch
(10.17 KB, patch)
2019-11-15 08:28 PST
,
alan
no flags
Details
Formatted Diff
Diff
Show Obsolete
(3)
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2019-11-15 07:39:44 PST
<
rdar://problem/57227259
>
alan
Comment 2
2019-11-15 07:43:52 PST
Created
attachment 383616
[details]
Patch
alan
Comment 3
2019-11-15 07:53:57 PST
Created
attachment 383618
[details]
Patch
alan
Comment 4
2019-11-15 08:02:40 PST
Created
attachment 383619
[details]
Patch
alan
Comment 5
2019-11-15 08:28:55 PST
Created
attachment 383621
[details]
Patch
WebKit Commit Bot
Comment 6
2019-11-15 09:00:40 PST
Comment on
attachment 383621
[details]
Patch Clearing flags on attachment: 383621 Committed
r252487
: <
https://trac.webkit.org/changeset/252487
>
WebKit Commit Bot
Comment 7
2019-11-15 09:00:42 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug